--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -46,12 +46,13 @@ html {
 
 .cd {
   display: flex;
-  height: 200px;
+  margin: auto;
+  width: 200px;
 }
 
 .cd-thumb {
-  width: 200px;
-  height: 200px;
+  width: 100%;
+  padding-top: 100%;
   margin: auto;
   background-size: cover;
   border-radius: 50%;
@@ -167,17 +168,22 @@ input[type="range"]::-webkit-slider-thumb {
   background-color: var(--primary-color);
   color: #fff;
 }
-.music img {
-  width: 80px;
-  height: 80px;
+.music .playlist-cd {
+  width: 60px;
+  height: 60px;
+  background-size: cover;
   border-radius: 50%;
-  padding: 10px;
+  margin: 10px;
 }
 
 .body {
   flex: 1;
 }
 
+.body span {
+  display: inline-block;
+  margin-top: 5px;
+}
 .music i {
   padding: 10px;
   font-size: 20px;
@@ -188,14 +194,12 @@ input[type="range"]::-webkit-slider-thumb {
   opacity: 0.8;
 }
 
-@media screen and (max-width: 450px) {
+@media (max-width: 740px) {
   .range {
     width: 400px;
     padding-right: 10px;
   }
-  .volume {
-    position: relative;
-    width: 140px;
-    margin-left: 230px;
+  #volume {
+    margin-right: 15px;
   }
 }
